Semana 03 Audio, video, iframes, formularios, css.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,17 @@
     </head>
     <body>
         <header>
-            <a href="index.html"><h1>TechShop</h1></a>
-            <nav>
-                <a href="ejemplo8.html">&triangleleft;</a>|
-                <a href="ejemplo3.html">&triangleright;</a>
-                <a href="#">Nosotros</a>
-                <a href="#">Tienda</a>
-                <a href="#">Reportes</a>
+            <nav class="nav">
+                <a class="nav-link logo" href="index.html">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo8.html">&triangleleft;</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="ejemplo3.html">&triangleright;</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="audios.html">Audios</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="videos.html">Videos</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="iframes.html">iFrames</a></li>
+                    <li class="nav-menu-item"><a class="nav-link nav-menu-link" href="formularios.html">Formularios</a></li>
+                </ul>
+                
             </nav>
         </header>
         <aside>
